# NUKS---MovieTracker

./: .gitignore  API.md  Dockerfile  app.js  authService.py  docker-compose.yml  index.html  main.py  models.py  movieService.py  nginx.conf  posterStorageService.py  pyproject.toml  requirements.txt  reviewService.py  wsgi.py
Documentation/: missingServicesDoc.md  movieServiceDoc.md  reviewServiceDoc.md  rootDoc.md
