[project]
name = "nuks-movietracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blinker==1.9.0",
    "brotlicffi==1.2.0.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.2.1",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "flask-pymongo==3.0.1",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.3.2",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "pip==26.0.1",
    "pycparser==3.0",
    "pymongo==4.17.0",
    "pysocks==1.7.1",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "sqlalchemy==2.0.48",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "werkzeug==3.1.6",
    "win-inet-pton==1.1.0",
]
